---- Changes since 3.37 ----
Removed old versions from the PHPmyAdmin script installer.
Updated the Drupal script installer to support version 5.1, phpPgAdmin to 4.1.1, and all the Horde scripts to their latest versions.
Don't allow extra admins to switch to the domain owner.
Added a page for installing third-party content styles, which can then be used for new websites exactly like the built-in styles.
When configuring email notification for new mailboxes, resellers and domains, you can now enter a Bcc address as well as a Cc address.
Split the Edit Virtual Server page into more sections.
Improved the IntegraMod and dotProject script installers to configure the database connection automatically.
Moved options for sending email to new and updated mailboxes from the Module Config page to the form for editing the actual messages.
Added the list-simple-aliases.pl and create-simple-alias.pl programs for easy alias management from the command line.
Fixed bugs related to renaming autoresponder files when renaming a domain.
Added the Less Antique content style.
Added preview images for content styles, visible via the Preview.. link next to the style menu.
Domain owners who cannot login via SSH are automatically added to the deniedssh group, which the SSH server is configured to deny even before checking their shell.
The spam and virus filtering features are now enabled by default for new virtual servers.
---- Changes since 3.38 ----
Improved the layout of the Disk Usage page, using tabs.
Added the --template option to modify-domain.pl.
Added a column to the list of installed scripts to show if it is the latest version or not.
Added a star rating system (out of 5) for script installers. Users can rate installed scripts, and ratings for those available are collated based on submissions from Virtualmin Pro users and displayed in the list of scripts available.