@@ -1523,6 +1523,7 @@ log_switch_admin=Switched to extra administrator $1
 log_dynip=Updated dynamic IP address settings
 log_add_styles=Installed third-party style $1
 log_enable_styles=Enabled content styles
+log_upgrade=Upgraded to Virtualmin Pro
 
 backup_title=Backup Virtual Servers
 backup_title2=Scheduled Backup
@@ -2248,6 +2249,7 @@ databases_desc1=This table lists any existing databases associated with this vir
 databases_desc2=This form can be used to change the names of the database logins for this virtual server. By default they are kept the same as the server's administration login.
 databases_desc3=This form can be used to change the primary database passwords for this virtual server. By default they are kept the same as the server's administration password.
 databases_desc4=This form allows you to bring existing manually created databases on the system under the ownership of this virtual server.
+databases_noimport=However, there are no un-owned databases on the system.
 
 database_title1=Create Database
 database_title2=Edit Database
@@ -2892,7 +2894,9 @@ validate_evirta=No active virtual interface for $1 found
 validate_ewebmin=Webmin user $1 does not exist
 validate_ewebminextra=Extra administrator Webmin user $1 does not exist
 validate_emysql=MySQL database $1 does not exist
+validate_emysqluser=MySQL login $1 does not exist
 validate_epostgres=PostgreSQL database $1 does not exist
+validate_epostgresuser=PostgreSQL login $1 does not exist
 validate_espamprocmail=Procmail configuration file $1 does not exist
 validate_espamconfig=SpamAssassin configuration directory $1 does not exist
 validate_espamcall=Procmail configuration file $1 does not call SpamAssassin
@@ -3279,3 +3283,34 @@ addstyle_ecmdfailed=Un-archive command failed : $1
 thumb_estyle=Style does not exist
 thumb_title=Style Preview
 thumb_ethumb=The content style $1 does not have a preview image.
+
+upgrade_title=Upgrade to Virtualmin Pro
+newupgrade_title=$upgrade_title
+upgrade_desc1=If you have enjoyed using Virtualmin GPL and want to take the next step to the Pro version, this page can be used to perform the upgrade process automatically. The steps to do this are :
+upgrade_step1=Go to <a href='http://$1/'>$1</a> and purchase a licence for Virtualmin Pro.
+upgrade_step2=Enter your serial number and license key in the form below.
+upgrade_step3=Click the <b>Upgrade</b> button. This will download all of the latest Virtualmin modules, and add them to your Webmin install. All of your existing settings will be left un-changed, and no other software installed.
+upgrade_header=Virtualmin Pro license
+upgrade_serial=Serial number
+upgrade_key=License key
+upgrade_ok=Upgrade Now
+upgrade_err=Failed to upgrade to Virtualmin Pro
+upgrade_eserial=Missing or invalid-looking serial number
+upgrade_ekey=Missing or invalid-looking license key
+upgrade_elogin=Your serial number of license key were not recogized by the Virtualmin Pro website
+upgrade_econnect=An error occurred connecting to the Virtualmin Pro server : $1
+upgrade_mods=Downloading and installing modules ..
+upgrade_mod=Installing $1 version $2 ..
+upgrade_gotver=.. version $1 is already installed
+upgrade_moderr=.. download failed : $1
+upgrade_modok=.. module <i>$1</i> was installed successfully
+upgrade_themeok=.. theme <i>$1</i> was installed successfully
+upgrade_modfailed=.. install failed : $1
+upgrade_sched=Configuring Webmin to automatically update Virtualmin Pro modules ..
+upgrade_schedok=.. done. Updates will be automatically installed.
+upgrade_schednot=.. done, but automatic update installation is not enabled. Use the <a href='$1'>$2</a> module to turn them on.
+upgrade_file=Creating Virtualmin license file ..
+upgrade_problems=Some errors occurred while upgrading your system to Virtualmin Pro. Please check the messages above for possible causes.
+upgrade_complete=Your system has been successfully upgraded to Virtualmin Pro!
+upgrade_theme=Enabling theme <i>$1</i> ..
+upgrade_esharedroot=Your Webmin root directory $1 is shared between multiple systems - module updates are not allowed
